# pgs_compiler

./: .gitignore  README.md  __init__.py  cli.py  pyproject.toml
compiler/: __init__.py  cli.py  structure_loader.py
compiler/atoms/: __init__.py  error_codes.py  errors.py  fqdn.py  invariants.py  phase.py  pipeline.py  snapshot_gate.py  sorting.py
compiler/governance/: __init__.py
compiler/graph/: __init__.py  addressing.py  edge.py  evidence.py  graph.py  hashing.py  node.py  query.py  state.py  trace.py  types.py
compiler/phases/: __init__.py  assert_executor.py  conformance_generate.py  discover.py  discover_structure.py  materialize.py  parse.py  validate_test_data.py  verify.py
compiler/projections/: __init__.py  artifact_index.py  canonical.py  dispatch.py  evidence.py  handlers.py  ipm.py  reverse.py  store_index.py  tokenized.py  vocabulary.py
compiler/schemas/: __init__.py  cc.py  cs.py  ct.py
compiler/stages/: __init__.py  s10_pps_projection.py  s1_extract.py  s2_canonicalize.py  s3_semantic_addressing.py  s4_govern.py  s5_construct.py  s6_project.py  s7_materialize.py  s8_verify.py  s9_attest.py
compiler/validators/: ct_validate_cc_binding.py  ct_validate_cc_inputs_satisfied.py  ct_validate_cc_no_missing_dependencies.py  ct_validate_cc_no_unused_outputs.py  ct_validator.py
compiler/visualization/: generate_all_graphs.py  wf_graph_generator.py
doc/: pi_implementation_plan_v0.md
inspection/: __init__.py  __main__.py  _discovery_selftest.py  _impact_projection_selftest.py  _semantic_model_selftest.py  behavior_logic.py  cli.py  discovery.py  equivalence_validation.py  errors.py  governance_projection.py  impact_projection.py  loader.py  render.py  resolver.py  semantic_model.py  semantic_projection.py  shell.py  snapshot_discovery.py  traces.py  traversal.py
phases/: discover_structure.py  materialize.py  parse.py  validate.py  verify.py
schemas/: rb.py  wf.py
scripts/: clean_compiled_artifacts.sh  clean_outputs_dir.sh  clean_pycache.sh  pgs_build.py  sync_protocol_snapshot.sh  yaml_py_sloc.py
scripts/testbed/: test_inspection.py
testbed/: test_compiler_atoms.py
tooling/: README.md  __init__.py
tooling/artifact_validation/: README.md  __init__.py  cc_validator.py  ct_bytecode_validator.py  errors.py  wf_cc_link_rules.py  wf_cc_link_validator.py  wf_graph_builder.py  wf_graph_rules.py  wf_graph_structure.py  wf_graph_validator.py
tooling/builder/: __init__.py  structure_tree.py
tooling/experimental/: __init__.py
tooling/experimental/molecule_builder/: README.md  __init__.py
tooling/experimental/molecule_builder/molecule/: __init__.py  builder.py  errors.py  lowering.py  schema_loader.py  symbol_resolver.py  syntax.py
tooling/protocol_validation/: __init__.py
tooling/protocol_validation/cli/: __init__.py  graph_validator.py  payload_validator.py  schema_validator.py
tooling/protocol_validation/core/: __init__.py  base.py
tooling/visualization/: README.md  __init__.py  dot_renderer.py  segment_to_dot.py  visualize.py  workflow_to_dot.py
validators/: ct_validate_cc_no_chaining.py  ct_validate_wf_binding_surface.py  ct_validate_wf_execution_graph.py  ct_validator.py
visualization/: __init__.py
visualization/consumers/: __init__.py  evidence_projection.py  evidence_query.py  evidence_reader.py
visualization/views/: __init__.py  _png_writer.py  artifact_lineage.py  family_view.py  materialization_view.py  structural_dag.py
